https://github.com/ioBroker/ioBroker.rest-api/issues/26
Implement binary read/write
