# lib/api/controllers/common.js
@@ -31,7 +31,7 @@ function findState(adapter, idOrName, user, type, callback) {
         callback = type;
         type = null;
     }
-    adapter.findForeignObject(idOrName, type, {user: user, checked: true, limitToOwnerRights: adapter.config.onlyAllowWhenUserIsOwner}, callback);
+    adapter.findForeignObject(idOrName, type, {user, checked: true, limitToOwnerRights: adapter.config.onlyAllowWhenUserIsOwner}, callback);
 }
 
 function getState(adapter, idOrName, user, type, callback) {
@@ -48,12 +48,48 @@ function getState(adapter, idOrName, user, type, callback) {
                 id = idOrName;
             }
             if (id) {
-                adapter.getForeignState(id, {user: user, limitToOwnerRights: adapter.config.onlyAllowWhenUserIsOwner}, (err, state) => {
+                adapter.getForeignState(id, {user, limitToOwnerRights: adapter.config.onlyAllowWhenUserIsOwner}, (err, state) => {
                     if (err || !state) {
                         state = undefined;
                     }
                     callback && callback (err, state, id, originId);
                 });
+            } else {
+                callback && callback(null, undefined, null, originId);
+            }
+        }
+    });
+}
+
+function getBinaryState(adapter, idOrName, user, type, callback) {
+    if (typeof type === 'function') {
+        callback = type;
+        type = null;
+    }
+    findState(adapter, idOrName, user, type, (err, id, originId) => {
+        if (err && (!err.message || !err.message.includes('permissionError'))) {
+            callback && callback(err, undefined, null, originId);
+        } else {
+            if (err && err.message.includes('permissionError')) {
+                // assume it is ID
+                id = idOrName;
+            }
+            if (id) {
+                if (adapter.getForeignBinaryState) {
+                    adapter.getForeignBinaryState(id, {user, limitToOwnerRights: adapter.config.onlyAllowWhenUserIsOwner}, (err, binary) => {
+                        if (err) {
+                            binary = undefined;
+                        }
+                        callback && callback (err, binary, id, originId);
+                    });
+                } else {
+                    adapter.getBinaryState(id, {user, limitToOwnerRights: adapter.config.onlyAllowWhenUserIsOwner}, (err, binary) => {
+                        if (err) {
+                            binary = undefined;
+                        }
+                        callback && callback (err, binary, id, originId);
+                    });
+                }
             } else {
                 callback && callback(null, undefined, null, originId);
             }
@@ -108,6 +144,7 @@ module.exports = {
     checkPermissions,
     findState,
     getState,
+    getBinaryState,
     parseUrl,
     errorResponse,
 };
