# lib/api/controllers/state.js
@@ -295,6 +295,101 @@ module.exports = {
         });
     },
 
+    readBinaryState: function (req, res) {
+        commonLib.checkPermissions(req._adapter, req._user, [{type: 'state', operation: 'read'}], async error => {
+            if (error) {
+                commonLib.errorResponse(req, res, error);
+            } else {
+                const params = commonLib.parseUrl(req.url, req.swagger, req._adapter.WEB_EXTENSION_PREFIX);
+                const oId = getIDs(params.stateId)[0];
+
+                let result;
+                let foundID;
+                try {
+                    const {binary, id, originId} = await new Promise((resolve, reject) => commonLib.getBinaryState(req._adapter, oId, req._user, (error, binary, id) =>
+                        error ? reject(error) : resolve({binary, id})));
+
+                    if (!id) {
+                        res.status(404).json({error: 'ID not found', id: originId});
+                        return;
+                    }
+                    result = binary;
+                    foundID = id;
+                } catch (error) {
+                    req._adapter.log.warn(`Cannot read ${oId}: ${error}`);
+                    commonLib.errorResponse(req, res, error, {id: oId});
+                    return;
+                }
+
+                // try to detect popular content types
+                foundID = foundID.toLowerCase()
+                if (foundID.endsWith('.png')) {
+                    res.setHeader('Content-Type', 'image/png');
+                } else if (foundID.endsWith('.jpg')) {
+                    res.setHeader('Content-Type', 'image/jpeg');
+                } else if (foundID.endsWith('.svg')) {
+                    res.setHeader('Content-Type', 'image/svg+xml');
+                } else if (foundID.endsWith('.txt')) {
+                    res.setHeader('Content-Type', 'text/plain');
+                } else if (foundID.endsWith('.json')) {
+                    res.setHeader('Content-Type', 'application/json');
+                } else if (foundID.endsWith('.mp3')) {
+                    res.setHeader('Content-Type', 'audio/mpeg');
+                } else if (foundID.endsWith('.wav')) {
+                    res.setHeader('Content-Type', 'audio/wav');
+                } else if (foundID.endsWith('.ogg')) {
+                    res.setHeader('Content-Type', 'audio/ogg');
+                } else {
+                    res.setHeader('Content-Type', 'application/octet-stream');
+                }
+
+                res.send(result);
+            }
+        });
+    },
+
+    writeBinaryState: function (req, res) {
+        commonLib.checkPermissions(req._adapter, req._user, [{type: 'state', operation: 'write'}], error => {
+            if (error) {
+                commonLib.errorResponse(req, res, error);
+            } else {
+                const params = commonLib.parseUrl(req.url, req.swagger, req._adapter.WEB_EXTENSION_PREFIX);
+                const oId = getIDs(params.stateId)[0];
+
+                commonLib.findState(req._adapter, oId, req._user, async (error, id, originId) => {
+                    if (error && error.message && error.message.includes('permissionError')) {
+                        // assume it is ID
+                        id = oId;
+                        error = null;
+                    }
+
+                    if (error) {
+                        commonLib.errorResponse(req, res, error, {id: oId});
+                    } else if (!id) {
+                        res.status(404).json({error: 'ID not found', id: oId});
+                    } else {
+                        try {
+                            const obj = await req._adapter.getForeignObjectAsync(id, {user: req._user, limitToOwnerRights: req._adapter.config.onlyAllowWhenUserIsOwner});
+                            if (obj && obj.common && obj.common.type === 'file') {
+                                if (req._adapter.setForeignBinaryStateAsync) {
+                                    await req._adapter.setForeignBinaryStateAsync(id, req.body, {user: req._user, limitToOwnerRights: req._adapter.config.onlyAllowWhenUserIsOwner});
+                                } else {
+                                    await req._adapter.setBinaryStateAsync(id, req.body, {user: req._user, limitToOwnerRights: req._adapter.config.onlyAllowWhenUserIsOwner});
+                                }
+                                res.status(200).json({result: 'ok', id});
+                            } else {
+                                res.status(422).json({error: 'State is not binary', id});
+                            }
+                        } catch (error) {
+                            req._adapter.log.warn(`Cannot read object ${id}: ${error.toString()}`);
+                            res.status(401).json({error: `Cannot read object ${id}: ${error.toString()}`, id});
+                        }
+                    }
+                });
+            }
+        });
+    },
+
     plainState: function (req, res) {
         commonLib.checkPermissions(req._adapter, req._user, [{type: 'state', operation: 'read'}], async error => {
             if (error) {
